--- a/media.css
+++ b/media.css
@@ -147,4 +147,27 @@ footer nav{
     text-align:justify;
 }
 
+.details-container::after, 
+.details-container::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    background-image: conic-gradient(from var(--angle), transparent 70%, rgb(110,0,179));
+    padding: 2px; 
+    border-radius: 2rem;
+    animation: 3s spin linear infinite;
+}
+
+
+.details-container::before {
+    filter: blur(1rem);
+    opacity: 0.5;
+}
+
+
 }
