--- a/media.css
+++ b/media.css
@@ -15,6 +15,14 @@
 
 }
 
+@media screen and (max-width: 900px) {
+    .about-containers {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
 
 @media screen and (max-width:1200px){
     #desktop-nav{
