--- a/media.css
+++ b/media.css
@@ -14,6 +14,13 @@
 
 
 }
+@media screen and (max-width: 900px) {
+    .section__pic-container {
+        width: 100%;  
+        max-width: 300px; 
+        margin: 0 auto; 
+    }
+}
 
 
 
