--- a/media.css
+++ b/media.css
@@ -151,3 +151,13 @@ footer nav{
 
 
 }
+
+@media screen and (min-width: 1200px) {
+    .section__pic-container {
+        max-width: 350px; 
+    }
+
+    .about-containers {
+        gap: 3rem; 
+    }
+}
