--- a/media.css
+++ b/media.css
@@ -151,3 +151,11 @@ footer nav{
 
 
 }
+
+@media screen and (min-width:1200px) and (max-width:1400px){
+
+.about-containers{
+        flex-wrap:wrap;
+
+    }
+}
